--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,20 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url(https://cdn.rawgit.com/theeluwin/NotoSansKR-Hestia/master/stylesheets/NotoSansKR-Hestia.css);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+.noto {
+  font-family: 'Noto Sans Korean', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+.roboto {
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  /* min-height: 100%; */
+  /* position: relative; */
+  font-size: 100%;
+  padding: 0px;
+  margin: 0px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
