--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,21 @@
 doctype html
 html
   head
-    title= title
+    title= "ATOCARE"
+    meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
+    meta(http-equiv="content-type", content="text/html; charset=utf-8")
+
+    //-
+      Stylesheets
+      =============================================
     link(rel='stylesheet', href='/stylesheets/style.css')
+    <!--[if lt IE 9]>
+    script(src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js")
+    <![endif]-->
+
+    //-
+      External JavaScripts
+      =============================================
+    script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js")
   body
     block content
