--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html
       Stylesheets
       =============================================
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous")
+    link(rel='stylesheet', href='/stylesheets/switchery.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     <!--[if lt IE 9]>
     script(src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js")
@@ -18,6 +19,8 @@ html
       External JavaScripts
       =============================================
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js")
+    script(type="text/javascript", src="/javascripts/switchery.min.js")
+    script(type="text/javascript", src="/javascripts/base.js")
   body
     include header
     block content
