changed font style

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,9 @@ block content
   .main-container
     .greeting-text.text-center
       h2.roboto(style="margin-top: 0; margin-bottom: 15px;") Nice to meet you!
-      h6.roboto If your baby has been suffering from atophic diseases, start with us!
-      h6.roboto Atocare will be a great solution to your baby.
+      h4.roboto Suffering atophic diseases?
+      h4.roboto Start with us!
+      h5.roboto Atocare will be a great solution to your baby.
     .icons.text-center(style="margin-bottom: 15px;")
       #profile-icon
         img(src="/images/main/profile_icon.png")
