--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,12 +64,17 @@ body {
   color: #F7F7F7;
 }
 
-.icons {
-  margin-top: 10px;
+#profile-icon {
+  margin-top: 20px;
+}
+
+#profile-icon img {
+  width: 180px;
+  height: auto;
 }
 
 .icon-list {
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 .icon-row {
