--- a/views/babyProfileView.jade
+++ b/views/babyProfileView.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  .main-container
+  .main-container.none-padding
     img.fit-to-div.environment-image(src="/images/baby/baby_profile.jpg")
