--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,14 +31,14 @@ body {
   width: 100%;
   padding: 20px 10px;
   height: 80px;
-  background: #86837E;
+  background: #868686;
 }
 
 .main-container {
   width: 100%;
   height: 100%;
   padding: 0 20px;
-  background: #86837E;
+  background: #868686;
 }
 
 .back-button, .plus-button {
@@ -88,4 +88,8 @@ body {
 
 .environment-image {
   margin-top: 10px;
+}
+
+.none-padding {
+  padding: 0;
 }
