--- a/views/scheduleView.jade
+++ b/views/scheduleView.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  .main-container
+  .main-container.none-padding
     img.fit-to-div.environment-image(src="/images/schedule/calendar.jpg")
