--- a/views/statisticsView.jade
+++ b/views/statisticsView.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  .main-container
+  .main-container.none-padding
     img.fit-to-div(src="/images/statistics/statistics.png")
