--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,7 @@ block content
             a(href="/environment")
               img(src="/images/main/house_icon.png")
           .col-xs-3.icon-col
-            a(href="/person/add")
+            a(href="/baby/register")
               img(src="/images/main/person_add_icon.png")
           .col-xs-3.icon-col
             a(href="/settings")
