--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,6 +37,7 @@ body {
 .main-container {
   width: 100%;
   height: 100%;
+  height: calc(100% - 80px);
   padding: 0 20px;
   background: #868686;
 }
