Added icon title in main, Changed typos

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,25 +13,33 @@ block content
           .col-xs-3.icon-col
             a(href="/alarm")
               img(src="/images/main/alarm_icon.png")
+              h5.greeting-text.main-icon-title Alarm
           .col-xs-3.icon-col
             a(href="/baby/profile")
               img(src="/images/main/baby_info_icon.png")
+              h5.greeting-text.main-icon-title Baby
           .col-xs-3.icon-col
             a(href="/schedule")
               img(src="/images/main/calendar_icon.png")
+              h5.greeting-text.main-icon-title Schedule
           .col-xs-3.icon-col
             a(href="/food")
               img(src="/images/main/food_icon.png")
+              h5.greeting-text.main-icon-title Food
         .row.icon-row
           .col-xs-3.icon-col
             a(href="/environment")
               img(src="/images/main/house_icon.png")
+              h5.greeting-text.main-icon-title Environment
           .col-xs-3.icon-col
             a(href="/baby/register")
               img(src="/images/main/person_add_icon.png")
+              h5.greeting-text.main-icon-title Register baby
           .col-xs-3.icon-col
             a(href="/settings")
               img(src="/images/main/setting_icon.png")
+              h5.greeting-text.main-icon-title Settings
           .col-xs-3.icon-col
             a(href="/statistics")
               img(src="/images/main/statistics_icon.png")
+              h5.greeting-text.main-icon-title Statistics
