--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,10 @@ body {
 /* #868686 */
 /* #86837E */
 
+a {
+  text-decoration: none !important;
+}
+
 .main-header {
   width: 100%;
   padding: 20px 10px;
@@ -40,6 +44,10 @@ body {
   height: calc(100% - 80px);
   padding: 0 20px;
   background: #868686;
+}
+
+.main-icon-title {
+  margin-top: 5px;
 }
 
 .back-button, .plus-button {
