Changed style property name none-padding -> no-padding

--- a/views/environmentView.jade
+++ b/views/environmentView.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
- .main-container.none-padding
+ .main-container.no-padding
    img.fit-to-div.environment-image(src="/images/environment/w_1.png")
    img.fit-to-div.environment-image(src="/images/environment/w_2.png")
    img.fit-to-div.environment-image(src="/images/environment/w_3.png")
