--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,8 @@ html
       =============================================
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/switchery.min.css')
+    link(rel='stylesheet', href='/stylesheets/pickadate/default.css')
+    link(rel='stylesheet', href='/stylesheets/pickadate/default.date.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     <!--[if lt IE 9]>
     script(src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js")
@@ -21,6 +23,8 @@ html
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js")
     script(type="text/javascript", src="/javascripts/switchery.min.js")
     script(type="text/javascript", src="/javascripts/countdowntimer.js")
+    script(type="text/javascript", src="/javascripts/pickadate/picker.js")
+    script(type="text/javascript", src="/javascripts/pickadate/picker.date.js")
     script(type="text/javascript", src="/javascripts/base.js")
   body
     if noHeader != true
