modified link to redirect to scheduleView after registerFoodDiary

--- a/views/foodRegisterDiaryView.jade
+++ b/views/foodRegisterDiaryView.jade
@@ -20,7 +20,7 @@ block content
         textarea.noto.form-textarea.boxsizingBorder(rows="8", cols="30", placeholder="다이어리를 입력해주세요.", style="width: 100%;")
     .row(style="margin-top: 20px;")
       .col-xs-12
-        a(href="/")
+        a(href="/schedule")
           button.roboto(style="font-size: 18px; width: 100%; height: 40px; background: #61605B; color: #F7F7F7; border: none;") SUBMIT
 
     script(src="/javascripts/pickadate/translations/ko_KR.js")
